# interaction_combinators.c

./: .gitignore  MANIFEST.in  Makefile  README.md  Untitled-2.py  __init__.py  _main.py  a.out  bst.c  comb.py  debug_app_issue.py  debugging.c  example.py  exec  fuel.py  main copy.c  main cursor fix applam.c  main old search.c  main.c  main.py  mini.c  music.ipynb  music.py  nat_eq.py  node.py  pyproject.toml  requirements-dev.txt  run.py  scott.py  setup.py  switch.py  tests.py
.tmp/: main.c
examples/: start.ipynb
include/: interaction_combinators.h
interaction_combinators.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_versino/: Untitled-2..c  c_comp.py  lego.py  main.c  main.py  manual 2 2.c  readme.md  run.py  single_node.py
rust_version/src/: main.rs
src/: Untitled-1  Untitled-1.md  __init__.py  debugging.c  helpers.py  main.c  main.py  run.py  scott.py
test/: __init__.py  tests.py
tinycombinator/: __init__.py  helpers.py  main.c  main.py  node.py  run.py  scott.py  terms.py
tinycombinator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
